fix spacing inside course card

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -237,6 +237,9 @@ h3 {
 .courses .course {
   --padd-inline: 1.75rem;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  row-gap: 1rem;
   padding: 3.5rem var(--padd-inline) 2rem;
   border-radius: 0.625rem;
   box-shadow: 0px 25px 50px rgba(6, 22, 141, 0.0442381);
@@ -257,16 +260,16 @@ h3 {
   }
 }
 .courses .course__text {
-  margin-top: 1rem;
+  margin-bottom: 0.5rem;
 }
 @media screen and (min-width: 69.375em) {
   .courses .course__text {
-    margin-top: 1.5rem;
+    margin-bottom: 0;
   }
 }
 .courses .course__link {
   display: inline-block;
-  margin-top: 1.5rem;
+  margin-top: auto;
   font-size: 1.125rem;
   font-weight: 700;
   text-decoration: none;
@@ -283,6 +286,7 @@ h3 {
 }
 @media screen and (min-width: 69.375em) {
   .courses .course {
+    row-gap: 1.5rem;
     padding-top: 4rem;
     padding-bottom: 2.5rem;
   }
