--- a/styles/scss/_landing.scss
+++ b/styles/scss/_landing.scss
@@ -137,6 +137,9 @@
   .course {
     --padd-inline: 1.75rem;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
     padding: 3.5rem var(--padd-inline) 2rem;
     border-radius: 0.625rem;
     box-shadow: 0px 25px 50px rgba(6, 22, 141, 0.0442381);
@@ -158,16 +161,16 @@
     }
 
     &__text {
-      margin-top: 1rem;
+      margin-bottom: 0.5rem;
 
       @include bp-up(large) {
-        margin-top: 1.5rem;
+        margin-bottom: 0;
       }
     }
 
     &__link {
       display: inline-block;
-      margin-top: 1.5rem;
+      margin-top: auto;
       font-size: $text-500;
       font-weight: 700;
       text-decoration: none;
@@ -184,6 +187,7 @@
     }
 
     @include bp-up(large) {
+      row-gap: 1.5rem;
       padding-top: 4rem;
       padding-bottom: 2.5rem;
     }
